--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@astrojs/react": "^2.0.2",
 		"@astrojs/tailwind": "^3.0.1",
+		"@radix-ui/react-aspect-ratio": "^1.0.1",
 		"@radix-ui/react-separator": "^1.0.1",
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
@@ -19,5 +20,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"tailwindcss": "^3.2.6"
+	},
+	"devDependencies": {
+		"prettier-plugin-tailwindcss": "^0.2.2"
 	}
 }
