--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@astrojs/react": "^2.0.2",
 		"@astrojs/tailwind": "^3.0.1",
+		"@headlessui/react": "^1.7.11",
 		"@heroicons/react": "^2.0.15",
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
@@ -19,7 +20,8 @@
 		"framer-motion": "^9.0.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"tailwindcss": "^3.2.6"
+		"tailwindcss": "^3.2.6",
+		"zustand": "^4.3.3"
 	},
 	"devDependencies": {
 		"prettier-plugin-tailwindcss": "^0.2.2"
